--- a/data_format_conversion.ipynb
+++ b/data_format_conversion.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kumara/miniconda3/envs/scganpytorch/lib/python3.6/site-packages/scanpy/api/__init__.py:6: FutureWarning: \n",
-      "\n",
-      "In a future version of Scanpy, `scanpy.api` will be removed.\n",
-      "Simply use `import scanpy as sc` and `import scanpy.external as sce` instead.\n",
-      "\n",
-      "  FutureWarning\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import csv\n",
@@ -26,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -72,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
+     ]
+    }
+   ],
    "source": [
     "andata.var_names = var_names\n",
     "andata.var_names_make_unique()\n",
@@ -96,9 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtering of the raw data is done with minimum 10 genes per cell.\n",
+      "Filtering of the raw data is done with minimum 3 cells per gene.\n",
+      "Cells number is 68579 , with 17789 genes per cell.\n"
+     ]
+    }
+   ],
    "source": [
     "# filtering \n",
     "\n",
@@ -124,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,11 +180,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.        0.        0.       ...  0.       16.447369  0.      ]\n"
+     ]
+    }
+   ],
    "source": [
     "import collections\n",
     "import numpy as np\n",
@@ -201,25 +214,104 @@
     "\n",
     "for i, line in enumerate(sc_raw_exp):\n",
     "    sc_genes, d = process_line(line)\n",
-    "    train_data[i] = sc_genes"
+    "    print(sc_genes)\n",
+    "    train_data[i] = sc_genes\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(68579, 17789)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc_raw.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13715, 17789)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(17789,)\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, line in enumerate(sc_raw_exp):\n",
+    "    sc_genes, d = process_line(line)\n",
+    "    print(sc_genes.shape)\n",
+    "    print(type(sc_genes))\n",
+    "    train_data[i] = sc_genes\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "        16.44736862,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       ...,\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data"
    ]
   },
   {
